Fix icons in header not showing up in Chrome

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 	width: 100%;
 }
 .icon {
-	font-family: Elusive-Icons, inherit;
+	font-family: Elusive-Icons;
 	vertical-align: baseline;
 }
 
